--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
     <!-- CSS stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="css\about.css">
+    <link rel="stylesheet" href="./about.css">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -85,10 +85,10 @@
     <h3 class="special"> Who We are</h3>
     <p>We are fans of Digital, Geeks by nature, Addicted to social networks and completely Crazy about Design. Our sharp minded team mobilizes curve, technical and fine strategist profiles to support each other in the wildest projects.</p>
     <h3 class="special">Meet the Team</h3>
-    <img class="profile" src="images\anjali.png" alt="Leader">
-    <img class="profile" src="images\aashutosh.png" alt="Front-end developer">
-    <img class="profile" src="images\naman.png" alt="Web Designer and Front-end developer">
-    <img class="profile" src="images\tushar.png" alt="Technical Project Chef and Front-end developer">
+    <img class="profile" src="anjali.png" alt="Leader">
+    <img class="profile" src="aashutosh.png" alt="Front-end developer">
+    <img class="profile" src="naman.png" alt="Web Designer and Front-end developer">
+    <img class="profile" src="tushar.png" alt="Technical Project Chef and Front-end developer">
     <h5 class="applying-float">Anjali</h5>
     <h5 class="applying-float">Aashutosh</h5>
     <h5 class="applying-float">Naman</h5>
