--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
 
   <!-- CSS stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="css\homepage.css">
+  <link rel="stylesheet" href="./homepage.css">
 
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -34,7 +34,7 @@
 
              <div class="for-aligningleft toggle"></div>
            </header>
-           <video src="video\corona.mp4" muted loop autoplay></video>
+           <video src="./corona.mp4" muted loop autoplay></video>
            <div class="overlay"></div>
            <div class="text">
              <h2>Stay Home </h2>
