--- a/meditation/meditation.html
+++ b/meditation/meditation.html
@@ -6,22 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css" />
-  <title>Audio App</title>
+  <title>Meditation App</title>
 </head>
 
 <body>
-  <div class="app">
+  <div class="app1">
     <div class="vid-container">
       <video loop>
         <source src="./video/rain.mp4" type="video/mp4">
       </video>
     </div>
+    <div class="container" style="padding: 0;margin: 0;">
+      <div class="row">
     <div class="time-select">
+      <div class="col">
       <button data-time="120">2 Minutes</button>
+      </div>
+      <div class="col">
       <button data-time="300" class="medium-mins">5 Minutes</button>
+      </div>
+      <div class="col">
       <button data-time="600" class="long-mins">10 Minutes</button>
+      </div>
     </div>
+      </div>
+    </div>
+  </div>
+  <div class="app">
     <div class="player-container">
       <audio class="song">
         <source src="./sounds/rain.mp3" />
@@ -36,12 +49,12 @@
         <circle cx="226.5" cy="226.5" r="216.5" stroke="#018EBA" stroke-width="20" />
       </svg>
       <img src="./svg/replay.svg" class="replay"></img>
-
-      <h3 class="time-display">0:00</h3>
+    </div>
+      <h3 class="time-display" style="height: 20vh;">0:00</h3>
     </div>
     <div class="sound-picker">
-      <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4"><img src="./svg/rain.svg" alt=""></button>
-      <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/beach.svg" alt=""></button>
+      <button data-sound="./sounds/rain.mp3" data-video="./video/rain.mp4"><img src="./svg/beach.svg" alt=""></button>
+      <button data-sound="./sounds/beach.mp3" data-video="./video/beach.mp4"><img src="./svg/rain.svg" alt=""></button>
     </div>
   </div>
 
